--- a/iOS.plist
+++ b/iOS.plist
@@ -26,7 +26,7 @@
 		<false/>
 	</dict>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>iOS</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
