--- a/holbox.xcodeproj/xcshareddata/xcschemes/Watch.xcscheme
+++ b/holbox.xcodeproj/xcshareddata/xcschemes/Watch.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1110"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,6 +17,20 @@
                BlueprintIdentifier = "DAF68DFC234758C50060895A"
                BuildableName = "holbox.app"
                BlueprintName = "WatchApp"
+               ReferencedContainer = "container:holbox.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DAF68DF9234758C50060895A"
+               BuildableName = "holbox.app"
+               BlueprintName = "WatchWrapper"
                ReferencedContainer = "container:holbox.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -86,7 +100,6 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      customArchiveName = "holbox"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
