--- a/holbox.xcodeproj/xcshareddata/xcschemes/Watch.xcscheme
+++ b/holbox.xcodeproj/xcshareddata/xcschemes/Watch.xcscheme
@@ -100,6 +100,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "holbox"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
