--- a/holbox.xcodeproj/xcshareddata/xcschemes/Mac.xcscheme
+++ b/holbox.xcodeproj/xcshareddata/xcschemes/Mac.xcscheme
@@ -80,7 +80,7 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
